[package]
name = "talk"
version = "0.1.0"
edition = "2018"

[dependencies]
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack", branch = "main" }

async-trait = "0.1"
bincode = "1"
blake3 = "1"
blst = "0.3"
chacha20poly1305 = "0.9"
ed25519-dalek = { version = "1", features = [ "serde", "batch" ] }
futures = "0.3"
rand = "0.7"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "io-util", "macros", "net", "rt-multi-thread", "sync", "time" ] }
x25519-dalek = { version = "1", features = [ "serde" ] }
